Changes for 2.2.12rc1

New features:

Bug fixes:
.......PS. [ZBX-9931] removed 2KB item key length limitation when sent to agent (viktors)
...G...... [ZBX-9932] removed 1KB zabbix_get item key length limitation (viktors)
..F....... [ZBX-9820] fixed overview of items and triggers with same name and multiple hosts (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.11

2.2.11rc1 was released as 2.2.11 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.11rc1

New features:
..F....... [ZBX-2616] update bundled DejaVu font from 2.34 to 2.35 (Richlv)
A.F....... [ZBX-1357] updated Czech, Italian and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-8235] fixed losing initial values when updating templated items (Gunars)
A......... [ZBX-9935] added check for item delay, to be between 0 and 86400 seconds (vitalijs)
...G...... [ZBX-9967] fixed agent compilation error on NetBSD 7 (dimir)
.D........ [ZBX-9347] added information about zabbix_sender input file format to the man page (dimir, Richlv)
..F....... [ZBX-9919] fixed y scale calculation for linear graphs (vitalijs)
...G...PS. [ZBX-9864] fixed compilation warnings regarding SIZE_T_MAX under NetBSD (Sasha)
..F....... [ZBX-9862] added meta tag "msapplication-config" to prevent MSIE11 requesting browserconfig.xml (Gunars)
A......... [ZBX-9340] fixed "data" property not being returned by API when error is generated on DB level (Gunars)
...G...PS. [ZBX-9863] fixed compilation warning regarding "empty_str" initialization in setproctitle.c (gleb)
........S. [ZBX-9912] fixed ITEM.LASTVALUE macro value being truncated at bytes rather than utf-8 characters (wiper)
........S. [ZBX-9643] fixed resolving of {TRIGGER.NAME} macro in action messages (viktors)
........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)